--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
+# App
 PORT=3000
 NODE_ENV=development
-DATABASE_URL=postgresql://admin:admin@db:5432/admin_service
+
+# DB
+DB_HOST=db
+DB_PORT=5432
+DB_USER=admin
+DB_PASS=admin
+DB_NAME=admin_service
+
+# Auth
 JWT_SECRET=supersecret
