--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ PORT=3000
 NODE_ENV=development
 
 # DB
-DB_HOST=db
+DB_HOST=postgres
 DB_PORT=5432
-DB_USER=admin
-DB_PASS=admin
-DB_NAME=admin_service
+DB_USER=postgres
+DB_PASS=admin123
+DB_NAME=admin_service_db
 
 # Auth
 JWT_SECRET=supersecret
