Fix database connection and environment variable usage

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT=3000
 NODE_ENV=development
 
 # DB
-DB_HOST=postgres
+DB_HOST=postgres-admin-service
 DB_PORT=5432
 DB_USER=postgres
 DB_PASS=admin123
@@ -11,3 +11,7 @@ DB_NAME=admin_service_db
 
 # Auth
 JWT_SECRET=supersecret
+
+# External Services
+LOAN_SERVICE_URL=loan-service:3001
+USER_SERVICE_URL=user-service:3000
